NetBSD Problem Report #58478
From www@netbsd.org Sun Jul 28 11:25:47 2024
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits)
key-exchange X25519 server-signature RSA-PSS (2048 bits)
client-signature RSA-PSS (2048 bits))
(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
by mollari.NetBSD.org (Postfix) with ESMTPS id D9E0E1A923C
for <gnats-bugs@gnats.NetBSD.org>; Sun, 28 Jul 2024 11:25:47 +0000 (UTC)
Message-Id: <20240728112546.BC2991A923E@mollari.NetBSD.org>
Date: Sun, 28 Jul 2024 11:25:46 +0000 (UTC)
From: campbell+netbsd@mumble.net
Reply-To: campbell+netbsd@mumble.net
To: gnats-bugs@NetBSD.org
Subject: experimental wg(4) probably doesn't build with INET6-only
X-Send-Pr-Version: www-1.0
>Number: 58478
>Category: kern
>Synopsis: experimental wg(4) probably doesn't build with INET6-only
>Confidential: no
>Severity: serious
>Priority: medium
>Responsible: kern-bug-people
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Sun Jul 28 11:30:00 +0000 2024
>Closed-Date: Wed Oct 09 14:37:13 +0000 2024
>Last-Modified: Wed Oct 09 14:37:13 +0000 2024
>Originator: Taylor R Campbell
>Release: current, 10
>Organization:
The NetWGv6 Foundation
>Environment:
>Description:
Use of #ifdef INET vs #ifdef INET6 is inconsistent in if_wg.c, so it probably doesn't build in a kernel made for the glorious v6-only future.
>How-To-Repeat:
build with INET6 but not INET
>Fix:
sure, why not
>Release-Note:
>Audit-Trail:
From: "Taylor R Campbell" <riastradh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/58478 CVS commit: src/sys/net
Date: Sun, 28 Jul 2024 14:49:49 +0000
Module Name: src
Committed By: riastradh
Date: Sun Jul 28 14:49:49 UTC 2024
Modified Files:
src/sys/net: if_wg.c
Log Message:
wg(4): Be more consistent about #ifdef INET/INET6.
PR kern/58478: experimental wg(4) probably doesn't build with
INET6-only
To generate a diff of this commit:
cvs rdiff -u -r1.108 -r1.109 src/sys/net/if_wg.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->needs-pullups
State-Changed-By: riastradh@NetBSD.org
State-Changed-When: Fri, 23 Aug 2024 21:13:10 +0000
State-Changed-Why:
probably fixed in HEAD, needs pullup-10
State-Changed-From-To: needs-pullups->closed
State-Changed-By: riastradh@NetBSD.org
State-Changed-When: Wed, 09 Oct 2024 14:37:13 +0000
State-Changed-Why:
fixed in HEAD, pulled up to 10
pullup-10 #934 https://releng.netbsd.org/cgi-bin/req-10.cgi?show=934
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.47 2022/09/11 19:34:41 kim Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2024
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.